ASM 修改规则把扫描注解改成JSON配置文件