@@ -1,6 +1,7 @@
 package com.chaoxing.transformer;
 
-import com.chaoxing.transformer.replace.MethodReplaceAnnotationProcessor;
+import com.chaoxing.transformer.replace.FindReplaceRuleUtil;
+import com.chaoxing.transformer.replace.MethodReplaceRuleProcessor;
 import com.chaoxing.transformer.replace.MethodReplaceTransformer;
 import com.chaoxing.transformer.replace.MethodReplaceInfo;
 import org.gradle.api.Plugin;
@@ -16,23 +17,27 @@ import org.objectweb.asm.util.CheckClassAdapter;
 import org.objectweb.asm.util.TraceClassVisitor;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
 
 public class MethodReplacePlugin implements Plugin<Project> {
-    private final Map<String, MethodReplaceInfo> methodReplaceMap = new HashMap<>();
+    private  Map<String, MethodReplaceInfo> methodReplaceMap = null;
 
     @Override
     public void apply(Project project) {
-        System.out.println("MethodReplacePlugin start");
-
+        System.out.println("MethodReplacePlugin start thread->"+Thread.currentThread().getName()+" "+Thread.currentThread().getId());
+        this.methodReplaceMap = FindReplaceRuleUtil.getInstance().getMethodReplaceMap();
+        new MethodReplaceRuleProcessor(this.methodReplaceMap).process();
         project.afterEvaluate(proj -> {
+            System.out.println("MethodReplacePlugin proj->"+proj);
             AppExtension android = proj.getExtensions().findByType(AppExtension.class);
             LibraryExtension library = proj.getExtensions().findByType(LibraryExtension.class);
 
@@ -75,16 +80,12 @@ public class MethodReplacePlugin implements Plugin<Project> {
                         // Get all class files (Java and Kotlin) regardless of the task
                         List<String> classFiles = getAllClassFiles(project, variantName);
 
-                        // First Pass: Collect @MethodReplace annotations
-                        for (String classFilePath : classFiles) {
-                            System.out.println("First pass - collecting annotations from: " + classFilePath);
-                            collectAnnotations(Path.of(classFilePath));
+                        for (String key : methodReplaceMap.keySet()) {
+                            System.out.println("fxa Replacement map1: " + key + " -> " + methodReplaceMap.get(key));
                         }
 
                         // Debug: Log the methodReplaceMap contents
                         System.out.println("methodReplaceMap after first pass: " + methodReplaceMap);
-
-                        Thread.sleep(3000);
                         // Second Pass: Apply replacements
                         for (String classFilePath : classFiles) {
                             System.out.println("Second pass - applying replacements to: " + classFilePath);
@@ -103,6 +104,7 @@ public class MethodReplacePlugin implements Plugin<Project> {
         String basePath = project.getBuildDir().getPath();
         List<String> classFilePaths = new ArrayList<>();
 
+        System.out.println("fxa getAllClassFiles project->"+project+" "+variantName);
         // Scan Java classes (include the task name in the path)
         String javaTaskName = getJavaTaskName(variantName);
         File javaClassesDir = new File(basePath + "/intermediates/javac/" + variantName + "/" + javaTaskName + "/classes/");
@@ -160,92 +162,108 @@ public class MethodReplacePlugin implements Plugin<Project> {
             if (file.isDirectory()) {
                 findClassFiles(dir, newRelativePath, classFilePaths);
             } else if (file.getName().endsWith(".class")) {
+                System.out.println("fxa scanning class:"+file.getName());
                 classFilePaths.add(file.getAbsolutePath());
             }
         }
     }
 
-    private void collectAnnotations(Path classPath) throws IOException {
-        byte[] bytes;
-        if (classPath.toString().startsWith("jar:")) {
-            String[] parts = classPath.toString().split("!");
-            String jarPath = parts[0].substring(4); // Remove "jar:"
-            String entryPath = parts[1];
-            try (java.util.jar.JarFile jar = new java.util.jar.JarFile(jarPath)) {
-                java.util.jar.JarEntry entry = jar.getJarEntry(entryPath);
-                try (java.io.InputStream is = jar.getInputStream(entry)) {
-                    bytes = is.readAllBytes();
-                }
-            }
-        } else {
-            bytes = Files.readAllBytes(classPath);
-        }
-        ClassReader cr = new ClassReader(bytes);
+//    private void applyReplacements(Path classPath) throws IOException {
+//        // Skip JAR entries in the second pass; only apply replacements to compiled classes
+////        if (classPath.toString().startsWith("jar:")) {
+////            System.out.println("Skipping replacement for JAR entry: " + classPath);
+////            return;
+////        }
+//        byte[] bytes = Files.readAllBytes(classPath);
+//        ClassReader cr = new ClassReader(bytes);
 //        String internalName = cr.getClassName();
-        // ← 在这里加一行，跳过 util 类
+//
+//        // ← 在这里也加同样的跳过逻辑
 //        if ("com/chaoxing/transformer/MethodReplaceUtil".equals(internalName)) {
-//            System.out.println("fxa Skipping annotation collection for " + internalName);
+//            System.out.println("fxa Skipping replacements for util class: " + internalName);
 //            return;
 //        }
-        ClassWriter cw = new ClassWriter(0);
-        MethodReplaceAnnotationProcessor processor = new MethodReplaceAnnotationProcessor(cw, methodReplaceMap);
-        cr.accept(processor, ClassReader.EXPAND_FRAMES);
+//        // Remove COMPUTE_FRAMES to avoid frame computation issues
+//        ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_MAXS);
+//
+//        // Add debugging to dump the bytecode before transformation
+//        System.out.println("Dumping bytecode before transformation for: " + classPath);
+//        TraceClassVisitor tracer = new TraceClassVisitor(null, new PrintWriter(System.out));
+//        cr.accept(tracer, 0);
+//
+//
+//        for (String key : methodReplaceMap.keySet()) {
+//            System.out.println("fxa Replacement map2: " + key + " -> " + methodReplaceMap.get(key));
+//        }
+//
+//        MethodReplaceTransformer transformer = new MethodReplaceTransformer(cw, methodReplaceMap);
+//        cr.accept(transformer, ClassReader.SKIP_FRAMES);
+//
+//        byte[] newBytes = cw.toByteArray();
+//
+//        // Dump the bytecode after transformation
+//        System.out.println("Dumping bytecode after transformation for: " + classPath);
+//        ClassReader crAfter = new ClassReader(newBytes);
+//        crAfter.accept(new TraceClassVisitor(null, new PrintWriter(System.out)), 0);
+//
+//        Files.write(classPath, newBytes, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+//        System.out.println("Processed class with replacements: " + classPath);
+//    }
+
+private void applyReplacements(Path classPath) throws IOException {
+    byte[] bytes;
+    if (classPath.toString().startsWith("jar:")) {
+        String[] parts = classPath.toString().split("!");
+        String jarPath = parts[0].substring(4); // Remove "jar:"
+        String entryPath = parts[1];
+        try (JarFile jar = new JarFile(jarPath)) {
+            JarEntry entry = jar.getJarEntry(entryPath);
+            try (InputStream is = jar.getInputStream(entry)) {
+                bytes = is.readAllBytes();
+            }
+        }
+    } else {
+        bytes = Files.readAllBytes(classPath);
     }
 
-    private void applyReplacements(Path classPath) throws IOException {
-        // Skip JAR entries in the second pass; only apply replacements to compiled classes
-        if (classPath.toString().startsWith("jar:")) {
-            System.out.println("Skipping replacement for JAR entry: " + classPath);
-            return;
-        }
+    ClassReader cr = new ClassReader(bytes);
+    String internalName = cr.getClassName();
 
-        byte[] bytes = Files.readAllBytes(classPath);
-
-        // Validate input bytecode
-        System.out.println("Validating input bytecode for: " + classPath);
-        try {
-            ClassReader crValidate = new ClassReader(bytes);
-            CheckClassAdapter.verify(crValidate, true, new PrintWriter(System.out));
-        } catch (Exception e) {
-            System.out.println("Invalid input bytecode for: " + classPath);
-            e.printStackTrace();
-            return;
-        }
-
-        ClassReader cr = new ClassReader(bytes);
-        String internalName = cr.getClassName();
-
-        // ← 在这里也加同样的跳过逻辑
-        if ("com/chaoxing/transformer/MethodReplaceUtil".equals(internalName)) {
-            System.out.println("fxa Skipping replacements for util class: " + internalName);
-            return;
-        }
-        // Remove COMPUTE_FRAMES to avoid frame computation issues
-        ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_MAXS);
-
-        // Add debugging to dump the bytecode before transformation
-        System.out.println("Dumping bytecode before transformation for: " + classPath);
-        TraceClassVisitor tracer = new TraceClassVisitor(null, new PrintWriter(System.out));
-        cr.accept(tracer, 0);
-
-        MethodReplaceTransformer transformer = new MethodReplaceTransformer(cw, methodReplaceMap);
-        cr.accept(transformer, ClassReader.SKIP_FRAMES);
-
-        byte[] newBytes = cw.toByteArray();
-
-        // Validate the generated bytecode
-        System.out.println("Validating modified bytecode for: " + classPath);
-        ClassReader crValidate = new ClassReader(newBytes);
-        CheckClassAdapter.verify(crValidate, true, new PrintWriter(System.out));
-
-        // Dump the bytecode after transformation
-        System.out.println("Dumping bytecode after transformation for: " + classPath);
-        ClassReader crAfter = new ClassReader(newBytes);
-        crAfter.accept(new TraceClassVisitor(null, new PrintWriter(System.out)), 0);
-
-        Files.write(classPath, newBytes, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
-        System.out.println("Processed class with replacements: " + classPath);
+    if ("com/chaoxing/transformer/MethodReplaceUtil".equals(internalName)) {
+        System.out.println("fxa Skipping replacements for util class: " + internalName);
+        return;
     }
+
+    // 使用 COMPUTE_FRAMES 自动计算栈映射表
+    ClassWriter cw = new ClassWriter(ClassWriter.COMPUTE_FRAMES);
+
+    // 调试：打印字节码转换前的内容
+    System.out.println("Dumping bytecode before transformation for: " + classPath);
+    TraceClassVisitor tracer = new TraceClassVisitor(null, new PrintWriter(System.out));
+    cr.accept(tracer, 0);
+
+    // 打印 methodReplaceMap 内容
+    for (String key : methodReplaceMap.keySet()) {
+        System.out.println("fxa Replacement map2: " + key + " -> " + methodReplaceMap.get(key));
+    }
+
+    MethodReplaceTransformer transformer = new MethodReplaceTransformer(cw, methodReplaceMap);
+    cr.accept(transformer, 0); // 移除 ClassReader.SKIP_FRAMES
+
+    byte[] newBytes = cw.toByteArray();
+
+    // 调试：打印字节码转换后的内容
+    System.out.println("Dumping bytecode after transformation for: " + classPath);
+    ClassReader crAfter = new ClassReader(newBytes);
+    crAfter.accept(new TraceClassVisitor(null, new PrintWriter(System.out)), 0);
+
+    // 验证生成的字节码 todo 这里读取不到ANDROID SDK
+//    System.out.println("Validating modified bytecode for: " + classPath);
+//    CheckClassAdapter.verify(crAfter, true, new PrintWriter(System.out));
+
+    Files.write(classPath, newBytes, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+    System.out.println("Processed class with replacements: " + classPath);
+}
 
     private String getJavaTaskName(String capitalizedVariantName) {
         return "compile" + capitalizedVariantName + "JavaWithJavac";
